# baguettotron

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/backend/: .env.example  .gitignore  README.md  alembic.ini  inspect_tokenizer.py  package.json  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 151579317f53_add_model_configs_and_system_prompt_.py  202501071200_create_clients_and_messages.py  202511131000_add_conversations.py  202511151200_add_system_prompt_to_clients.py  202511151300_add_generation_params_to_clients.py  202511191400_add_rag_documents_and_chunks.py  90fbfd38b17e_add_content_hash_to_documents.py  9280e0524366_change_conversation_id_to_uuid.py  9e40300f9fc4_add_thinking_field_to_messages.py
apps/backend/app/: main.py  model_utils.py  schemas.py
apps/backend/app/api/endpoints/: clients.py  conversations.py  documents.py  models.py
apps/backend/app/data/: chat.sqlite3
apps/backend/app/db/: __init__.py  config.py  conversation_helpers.py  models.py  seed_models.py  session.py
apps/backend/app/rag/: __init__.py  chunker.py  config.py  document_processor.py  embeddings.py  pipeline.py  retriever.py  vector_store.py
apps/backend/app/services/: document_events.py  document_service.py  model_utils.py
apps/backend/tests/: inspect_tokenizer.py  reproduce_rag.py  test_deduplication.py  test_docling_chunker.py  test_hybrid_chunker.py  test_list_documents.py  test_list_documents_endpoint.py  test_rag_improvements.py  test_upload.txt
apps/frontend/: eslint.config.mjs  package.json  (+1 more)
(+51 files in other folders)
